--- a/portfolio.html
+++ b/portfolio.html
@@ -34,17 +34,17 @@
         </nav>
 
         <ul class="header__list list">
-          <li class="header__item--contacts">
-            <a href="mailto:info@devstudio.com" class="header__link--contacts link"
-              ><svg class="header--icon" width="16" height="12">
+          <li class="header__item-contacts">
+            <a href="mailto:info@devstudio.com" class="header__link-contacts link"
+              ><svg class="header-icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="header__item--contacts">
-            <a href="tel:+380961111111" class="header__link--contacts link">
-              <svg class="header--icon" width="10" height="16">
+          <li class="header__item-contacts">
+            <a href="tel:+380961111111" class="header__link-contacts link">
+              <svg class="header-icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -59,209 +59,209 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <ul class="list portfolio__list--btn">
-            <li class="portfolio__item--btn">
-              <button type="button" class="portfolio--btn">Все</button>
+          <ul class="list portfolio__list-btn">
+            <li class="portfolio__item-btn">
+              <button type="button" class="portfolio-btn">Все</button>
             </li>
-            <li class="portfolio__item--btn">
-              <button type="button" class="portfolio--btn">Веб-сайти</button>
+            <li class="portfolio__item-btn">
+              <button type="button" class="portfolio-btn">Веб-сайти</button>
             </li>
-            <li class="portfolio__item--btn">
-              <button type="button" class="portfolio--btn">Приложения</button>
+            <li class="portfolio__item-btn">
+              <button type="button" class="portfolio-btn">Приложения</button>
             </li>
-            <li class="portfolio__item--btn">
-              <button type="button" class="portfolio--btn">Дизайн</button>
+            <li class="portfolio__item-btn">
+              <button type="button" class="portfolio-btn">Дизайн</button>
             </li>
-            <li class="portfolio__item--btn">
-              <button type="button" class="portfolio--btn">Маркетинг</button>
+            <li class="portfolio__item-btn">
+              <button type="button" class="portfolio-btn">Маркетинг</button>
             </li>
           </ul>
           <ul class="list portfolio__list">
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/laptop1.jpg"
                     alt="laptop1"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">Технокряк</h3>
-                  <p class="portfolio__item--text">Веб-сайт</p>
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">Технокряк</h3>
+                  <p class="portfolio__item-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/poster.jpg"
                     alt="poster"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h3>
-                  <p class="portfolio__item--text">Дизайн</p>
+                  <p class="portfolio__item-text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/restaurant.jpg"
                     alt="restaurant"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">Ресторан <span lang="en">Seafood</span></h3>
-                  <p class="portfolio__item--text">Приложение</p>
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">Ресторан <span lang="en">Seafood</span></h3>
+                  <p class="portfolio__item-text">Приложение</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/headphones.jpg"
                     alt="headphones"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">Проект <span lang="en">Prime</span></h3>
-                  <p class="portfolio__item--text">Маркетинг</p>
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">Проект <span lang="en">Prime</span></h3>
+                  <p class="portfolio__item-text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/boxes.jpg"
                     alt="boxes"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">Проект <span lang="en">Boxes</span></h3>
-                  <p class="portfolio__item--text">Приложение</p>
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">Проект <span lang="en">Boxes</span></h3>
+                  <p class="portfolio__item-text">Приложение</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/inspiration.jpg"
                     alt="inspiration"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">
                     <span lang="en">Inspiration has no Borders</span>
                   </h3>
-                  <p class="portfolio__item--text">Веб-сайт</p>
+                  <p class="portfolio__item-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/book.jpg"
                     alt="book"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">
                     Издание <span lang="en"></span>Limited Edition
                   </h3>
-                  <p class="portfolio__item--text">Дизайн</p>
+                  <p class="portfolio__item-text">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/lab.jpg"
                     alt="prodject-lab"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title">Проект <span lang="en"></span>LAB</h3>
-                  <p class="portfolio__item--text">Маркетинг</p>
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title">Проект <span lang="en"></span>LAB</h3>
+                  <p class="portfolio__item-text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio__item--wrap">
+                <div class="portfolio__item-wrap">
                   <img
-                    class="portfolio--img"
+                    class="portfolio-img"
                     src="./images/portfolios/laptop2.jpg"
                     alt="laptop2"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio__img--text">
+                  <p class="portfolio__img-text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio__item--content">
-                  <h3 class="portfolio__item--title"><span lang="en">Growing Business</span></h3>
-                  <p class="portfolio__item--text">Приложение</p>
+                <div class="portfolio__item-content">
+                  <h3 class="portfolio__item-title"><span lang="en">Growing Business</span></h3>
+                  <p class="portfolio__item-text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -282,47 +282,47 @@
             <li class="footer__item">
               <a
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                class="footer__item--map link"
+                class="footer__item-map link"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
             <li class="footer__item">
-              <a href="mailto:info@devstudio.com" class="footer__item--contacts link"
+              <a href="mailto:info@devstudio.com" class="footer__item-contacts link"
                 >info@devstudio.com</a
               >
             </li>
             <li class="footer__item">
-              <a href="tel:+380961111111" class="footer__item--contacts link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="footer__item-contacts link">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
         <div class="footer-social">
-          <h2 class="footer--title">присоединяйтесь</h2>
+          <h2 class="footer-title">присоединяйтесь</h2>
           <ul class="footer-social__list list">
             <li class="footer-social__item">
               <a href="" class="footer-social__link">
-                <svg class="footer--icon" width="20" height="20">
+                <svg class="footer-icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social__item">
               <a href="" class="footer-social__link">
-                <svg class="footer--icon" width="20" height="20">
+                <svg class="footer-icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social__item">
               <a href="" class="footer-social__link">
-                <svg class="footer--icon" width="20" height="20">
+                <svg class="footer-icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social__item">
               <a href="" class="footer-social__link">
-                <svg class="footer--icon" width="20" height="20">
+                <svg class="footer-icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
@@ -330,9 +330,9 @@
           </ul>
         </div>
         <div class="footer-subscribe">
-          <h2 class="footer--title">Подпишитесь на рассылку</h2>
+          <h2 class="footer-title">Подпишитесь на рассылку</h2>
           <label for="user_email"></label>
-          <div class="footer__input--wrap">
+          <div class="footer__input-wrap">
             <input
               type="email"
               name="email"
@@ -342,7 +342,7 @@
             />
             <button type="submit" class="footer-subscribe__btn btn">
               Подписаться
-              <svg class="footer__btn--icon" width="24" height="24">
+              <svg class="footer__btn-icon" width="24" height="24">
                 <use href="./images/icons.svg#send"></use>
               </svg>
             </button>
