--- a/index.html
+++ b/index.html
@@ -459,6 +459,9 @@
         </div>
       </div>
     </footer>
+
+    <!-- modal -->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
