--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Header -->
-
+    <!-- 
     <header class="header">
       <div class="container header__nav">
         <nav class="header__nav">
@@ -53,7 +53,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- hero -->
@@ -119,7 +119,7 @@
 
       <!-- what we are doing? -->
 
-      <section class="doing">
+      <!-- <section class="doing">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="list doing__list">
@@ -152,11 +152,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- our team -->
 
-      <section class="section team">
+      <!-- <section class="section team">
         <div class="container">
           <h2 class="title team__title">Наша команда</h2>
           <ul class="list team__list">
@@ -164,8 +164,8 @@
               <img
                 src="./images/our-team/img-1.jpg"
                 alt="Игорь Демьяненко"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="team__item-content">
                 <h3 class="team__item-title">Игорь Демьяненко</h3>
@@ -325,7 +325,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- clients -->
       <section class="section">
@@ -381,7 +381,7 @@
 
     <!-- footer -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer__container">
         <div class="footer__info">
           <a href="./index.html" class="link logo footer__logo"
@@ -458,7 +458,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- modal -->
 
