--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
           </ul>
         </nav>
 
-        <ul class="header__list list">
+        <ul class="header__list header__list-contacts list">
           <li class="header__item-contacts">
             <a href="mailto:info@devstudio.com" class="header__link-contacts link"
               ><svg class="header-icon" width="16" height="12">
@@ -51,9 +51,61 @@
             >
           </li>
         </ul>
+        <button type="button" class="mob-menu-open">
+          <svg width="40" height="40">
+            <use href="images/icons.svg#mob-menu-open"></use>
+          </svg>
+        </button>
+        <div class="mob-menu is-hidden">
+          <div class="container">
+            <div class="mob-menu--top">
+              <button type="button" class="mob-menu-close">
+                <svg class="mob-close-icon" width="40" height="40">
+                  <use href="images/icons.svg#mob-close"></use>
+                </svg>
+              </button>
+              <ul class="mob-menu__list list">
+                <li class="mob-menu__item">
+                  <a href="./index.html" class="mob-menu__link link current">Студия</a>
+                </li>
+                <li class="mob-menu__item">
+                  <a href="./portfolio.html" class="mob-menu__link link">Портфолио</a>
+                </li>
+                <li class="mob-menu__item"><a href="" class="mob-menu__link link">Контакты</a></li>
+              </ul>
+            </div>
+            <div class="mob-menu--bottom">
+              <ul class="mob-menu__list-contacts list">
+                <li class="mob-menu__item-contacts">
+                  <a href="tel:+380961111111" class="mob-menu__link--tel link">
+                    +38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mob-menu__item-contacts">
+                  <a href="mailto:info@devstudio.com" class="mob-menu__link--mail link">
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
+              <ul class="mob-social__list list">
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">Instagram</a>
+                </li>
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">Twitter</a>
+                </li>
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">Facebook</a>
+                </li>
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
-
     <!-- main -->
 
     <main>
@@ -350,5 +402,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
