--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Header -->
-    <!-- 
+
     <header class="header">
       <div class="container header__nav">
         <nav class="header__nav">
@@ -34,7 +34,7 @@
           </ul>
         </nav>
 
-        <ul class="header__list list">
+        <ul class="header__list header__list-contacts list">
           <li class="header__item-contacts">
             <a href="mailto:info@devstudio.com" class="header__link-contacts link"
               ><svg class="header-icon" width="16" height="12">
@@ -52,8 +52,61 @@
             >
           </li>
         </ul>
+        <button type="button" class="mob-menu-open">
+          <svg width="40" height="40">
+            <use href="images/icons.svg#mob-menu-open"></use>
+          </svg>
+        </button>
+        <div class="mob-menu is-hidden">
+          <div class="container">
+            <div class="mob-menu--top">
+              <button type="button" class="mob-menu-close">
+                <svg class="mob-close-icon" width="40" height="40">
+                  <use href="images/icons.svg#mob-close"></use>
+                </svg>
+              </button>
+              <ul class="mob-menu__list list">
+                <li class="mob-menu__item">
+                  <a href="./index.html" class="mob-menu__link link current">Студия</a>
+                </li>
+                <li class="mob-menu__item">
+                  <a href="./portfolio.html" class="mob-menu__link link">Портфолио</a>
+                </li>
+                <li class="mob-menu__item"><a href="" class="mob-menu__link link">Контакты</a></li>
+              </ul>
+            </div>
+            <div class="mob-menu--bottom">
+              <ul class="mob-menu__list-contacts list">
+                <li class="mob-menu__item-contacts">
+                  <a href="tel:+380961111111" class="mob-menu__link--tel link">
+                    +38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mob-menu__item-contacts">
+                  <a href="mailto:info@devstudio.com" class="mob-menu__link--mail link">
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
+              <ul class="mob-social__list list">
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">Instagram</a>
+                </li>
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">Twitter</a>
+                </li>
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">Facebook</a>
+                </li>
+                <li class="mob-social__item">
+                  <a href="" class="mob-social__link link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- hero -->
@@ -156,17 +209,35 @@
 
       <!-- our team -->
 
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="title team__title">Наша команда</h2>
           <ul class="list team__list">
             <li class="team__item">
-              <img
-                src="./images/our-team/img-1.jpg"
-                alt="Игорь Демьяненко"
-                width="450"
-                height="460"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/igor/igor-desk-1x.jpg  1x,
+                    /./images/our-team/igor/igor-desk-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/igor/igor-tab-1x.jpg  1x,
+                    /./images/our-team/igor/igor-tab-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/igor/igor-1x.jpg  1x,
+                    /./images/our-team/igor/igor-2x.jpg 2x
+                  "
+                  media="(min-width:480px)"
+                />
+                <img src="/images/our-team/igor/igor-desk-1x.jpg" alt="Игорь Демьяненко" />
+              </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Игорь Демьяненко</h3>
                 <p class="team__item-text">Product Designer</p>
@@ -203,7 +274,30 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./images/our-team/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/olga/olga-desk-1x.jpg 1x,
+                    ./images/our-team/olga/olga-desk-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    /images/our-team/olga/olga-tab-1x.jpg  1x,
+                    ./images/our-team/olga/olga-tab-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/olga/olga-1x.jpg 1x,
+                    ./images/our-team/olga/olga-2x.jpg 2x
+                  "
+                  media="(min-width:480px)"
+                />
+                <img src="/images/our-team/olga/olga-desk-1x.jpg" alt="Ольга Репина" />
+              </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Ольга Репина</h3>
                 <p class="team__item-text">Frontend Developer</p>
@@ -240,12 +334,30 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="./images/our-team/img-3.jpg"
-                alt="Николай Тарасов"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/nikolas/nikolas-desk-1x.jpg 1x,
+                    ./images/our-team/nikolas/nikolas-desk-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/nikolas/nikolas-tab-1x.jpg 1x,
+                    ./images/our-team/nikolas/nikolas-tab-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/nikolas/nikolas-1x.jpg 1x,
+                    ./images/our-team/nikolas/nikolas-2x.jpg 2x
+                  "
+                  media="(min-width:480px)"
+                />
+                <img src="/images/our-team/nikolas/nikolas-desk-1x.jpg" alt="Николай Тарасов" />
+              </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Николай Тарасов</h3>
                 <p class="team__item-text">Marketing</p>
@@ -282,12 +394,31 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="./images/our-team/img-4.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/our-team/micheal/michael-desk-1x.jpg 1x,
+                    ./images/our-team/micheal/michael-desk-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                  width="800px"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/micheal/michael-tab-1x.jpg 1x,
+                    ./images/our-team/micheal/michael-tab-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="
+                    ./images/our-team/micheal/michael-1x.jpg 1x,
+                    ./images/our-team/micheal/michael-2x.jpg 2x
+                  "
+                  media="(min-width:480px)"
+                />
+                <img src="./images/our-team/micheal/michael-desk-1x.jpg" alt="Михаил Ермаков" />
+              </picture>
               <div class="team__item-content">
                 <h3 class="team__item-title">Михаил Ермаков</h3>
                 <p class="team__item-text">UI Designer</p>
@@ -325,7 +456,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- clients -->
       <section class="section">
@@ -544,5 +675,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
