--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
     <!-- main -->
 
     <main>
-      <section class="portfolio">
+      <section class="portfolio section">
         <div class="container">
           <ul class="list portfolio__list-btn">
             <li class="portfolio__item-btn">
@@ -132,13 +132,30 @@
             <li class="portfolio__item">
               <a href="" class="link">
                 <div class="portfolio__item-wrap">
-                  <img
-                    class="portfolio-img"
-                    src="./images/portfolios/laptop1.jpg"
-                    alt="laptop1"
-                    width="370"
-                    height="294"
-                  />
+                  <picture class="portfolio-img">
+                    <source
+                      srcset="/images/portfolios/desk/.jpg
+                    ./images/portfolios/desk/laptop1-desk.jpg  1x,
+                    ./images/portfolios/desk/laptop1-desk-2x.jpg 2x
+                  "
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/desk/laptop1-tab.jpg    1x,
+                        ./images/portfolios/desk/laptop1-tab-2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolios/desk/laptop1-mob.jpg    1x,
+                        ./images/portfolios/desk/laptop1-mob-2x.jpg 2x
+                      "
+                      media="(min-width:480px)"
+                    />
+                    <img src="./images/portfolios/desk/laptop1-desk.jpg" alt="laptop1" />
+                  </picture>
                   <p class="portfolio__img-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
